--- a/styles.css
+++ b/styles.css
@@ -139,3 +139,25 @@ p.thank-you {
     color: #363636;
     font-weight: bold;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.right-align {
+    float: right;
+}
+
+.username-box {
+    display: inline-block;
+    padding: 0px 20px;
+    border: 1px solid #ccc;
+    border-radius: 125px;
+}
